--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,11 @@
 output: github_document
 ---
 
+<!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![R-CMD-check](https://github.com/robitalec/distance-to/workflows/R-CMD-check/badge.svg)](https://github.com/robitalec/distance-to/actions)
+<!-- badges: end -->
+  
 # distance-to
 
 ## Overview
