--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction to distanceto"
+title: "Introduction to distance-to"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{intro}
@@ -34,8 +34,21 @@ The `distanceto` package provides two functions:
 * `distance_to`
 * `distance_raster`
 
+# Install
 
-# Example: `distance_to`
+```{r install, eval = FALSE}
+# Enable the robitalec universe
+options(repos = c(
+    robitalec = 'https://robitalec.r-universe.dev',
+    CRAN = 'https://cloud.r-project.org'))
+
+# Install distanceto
+install.packages('distanceto')
+```
+
+
+
+# `distance_to`
 
 ```{r setup}
 library(distanceto)
@@ -43,7 +56,7 @@ library(sf)
 ```
 
 
-## Longlat/unprojected
+## Long-lat / unprojected coordinates
 ```{r}
 # Load nc data
 nc <- st_read(system.file("shapes/sids.shp", package="spData"))
@@ -69,7 +82,7 @@ hist(dist)
 ```
 
 
-## Projected
+## Projected coordinates
 
 ```{r}
 # Load seine data
@@ -96,7 +109,7 @@ hist(dist)
 
 
 
-# Example: `distance_raster`
+# `distance_raster`
 
 ```{r}
 library(raster)
