--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,7 @@ output: github_document
 ---
 
 <!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-green.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/robitalec/distance-to/workflows/R-CMD-check/badge.svg)](https://github.com/robitalec/distance-to/actions)
 [![CRAN status](https://www.r-pkg.org/badges/version/distanceto)](https://cran.r-project.org/package=distanceto)
 <!-- badges: end -->
