replace sids spData with nc sf

--- a/vignettes/intro.Rmd
+++ b/vignettes/intro.Rmd
@@ -59,8 +59,8 @@ library(sf)
 ## Long-lat / unprojected coordinates
 ```{r}
 # Load nc data
-nc <- st_read(system.file("shapes/sids.shp", package="spData"))
 st_crs(nc) <- "+proj=longlat +datum=NAD27"
+nc <- st_read(system.file("shape/nc.shp", package="sf"))
 
 # Set number of sampling points
 npts <- 1e3
